// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ControlIcon Control Icon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="close"
      class="ControlIcon__StyledButton-sc-1dwqlsv-0 cilMYH"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 SSzNW nds-icon--close"
        fill="currentColor"
        focusable="false"
        height="32px"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/ControlIcon Disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="close"
      class="ControlIcon__StyledButton-sc-1dwqlsv-0 nKEsh"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 SSzNW nds-icon--close"
        fill="currentColor"
        focusable="false"
        height="32px"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/ControlIcon Toggled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <button
      aria-label="close"
      class="ControlIcon__StyledButton-sc-1dwqlsv-0 eiJJIZ"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 SSzNW nds-icon--close"
        fill="currentColor"
        focusable="false"
        height="32px"
        viewBox="0 0 24 24"
        width="32px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
